30 finally refactoring